[package]
name = "some-dream"
version = "0.1.0"
authors = ["Ricardo Bin <ricardohbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "*"
rand = "*"
console = "*"
strum = "0.18.0"
strum_macros = "0.18.0"